NXP-7586: fix content overflow in gadget

--- a/nuxeo-webengine-gadgets/src/main/resources/skin/resources/css/gadget-common.css
+++ b/nuxeo-webengine-gadgets/src/main/resources/skin/resources/css/gadget-common.css
@@ -47,6 +47,7 @@ button {
 
 #content {
   padding:0.5em;
+  overflow: auto;
 }
 
 .tools {
